# lesson_29_homework

./: README.md  manage.py  pyproject.toml
ads/: models.py  serializers.py
ads/migrations/: 0001_initial.py
ads/urls/: ad.py  category.py
ads/views/: ad.py  category.py  main_page.py
fixtures/: user.json
homework_29/: asgi.py  settings.py  urls.py  wsgi.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
